--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#se define el puerto por donde se escucha el servidor web
 server.port=80
+
+#se establece que las paginas no esten en el cache del servidor(en produccion si deben estar en cache)
+spring.thymeleaf.cache=false
